--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,12 +11,14 @@ services:
       - db
   db:
     image: mysql:5.7
+    ports:
+      - '3306:3306'
     volumes:
       - /var/lib/mysql
       - ./dump:/docker-entrypoint-initdb.d
     environment:
-      - MYSQL_ROOT_PASSWORD=kabum
-      - MYSQL_DATABASE=kabum
+      - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_DATABASE=db
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
@@ -25,4 +27,4 @@ services:
     ports:
       - "8082:80"
     environment:
-      - MYSQL_ROOT_PASSWORD=kabum
+      - MYSQL_ROOT_PASSWORD=root
